force-app/main/default/objects/Student__c/fields/BOD__c.field-meta.xml
<CustomField>
    <fullName>BOD__c</fullName>
    <label>BOD</label>
    <type>Date</type>
</CustomField>