force-app/main/default/objects/Student__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email</description>
    <externalId>true</externalId>
    <label>Email</label>
    <type>Email</type>
</CustomField>