force-app/main/default/objects/Student__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <label>Enrollment</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>