force-app/main/default/objects/Student__c/fields/Total_Summary_Field__c.field-meta.xml
<CustomField>
    <fullName>Total_Summary_Field__c</fullName>
    <label>Total-Summary Field</label>
    <summarizedField>Scholarhip__c.Amount__c</summarizedField>
    <summaryForeignKey>Scholarhip__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>